--- a/Midia/Views/Base.lproj/Main.storyboard
+++ b/Midia/Views/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="120.53571428571428"/>
+            <point key="canvasLocation" x="1074" y="55"/>
         </scene>
         <!--Favorites View Controller-->
         <scene sceneID="xlh-es-kDn">
@@ -220,6 +220,84 @@
             </objects>
             <point key="canvasLocation" x="1073.913043478261" y="1472.5446428571429"/>
         </scene>
+        <!--Configuration View Controller-->
+        <scene sceneID="rFI-bs-AXc">
+            <objects>
+                <tableViewController title="Configuration View Controller" id="S36-uD-eSF" customClass="SettingsViewController" customModule="Midia" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="ZKm-Pg-pGj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="6gU-gt-Oid">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Zl-1Y-Zsb">
+                                    <rect key="frame" x="16" y="10" width="382" height="60"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="30"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="3Zl-1Y-Zsb" secondAttribute="bottom" constant="10" id="3Rb-0c-oSL"/>
+                                <constraint firstItem="3Zl-1Y-Zsb" firstAttribute="leading" secondItem="6gU-gt-Oid" secondAttribute="leading" constant="16" id="9M5-sZ-zgl"/>
+                                <constraint firstItem="3Zl-1Y-Zsb" firstAttribute="top" secondItem="6gU-gt-Oid" secondAttribute="top" constant="10" id="IXR-hz-4TF"/>
+                                <constraint firstAttribute="trailing" secondItem="3Zl-1Y-Zsb" secondAttribute="trailing" constant="16" id="ihq-c6-Yty"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="selectMediaItemCell" rowHeight="56" id="UYW-YI-LLR" customClass="ChangeMediaItemKindTableViewCell" customModule="Midia" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="135.5" width="414" height="56"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="UYW-YI-LLR" id="xKb-ED-Aa8">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jO7-L3-DIr">
+                                            <rect key="frame" x="73" y="11" width="321" height="35"/>
+                                            <segments>
+                                                <segment title="Books"/>
+                                                <segment title="Movies"/>
+                                            </segments>
+                                            <color key="selectedSegmentTintColor" red="0.0" green="0.58980089430000004" blue="1" alpha="0.28272153253424659" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </segmentedControl>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" image="book" catalog="system" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RLV-D7-vui">
+                                            <rect key="frame" x="0.0" y="9.5" width="65" height="37"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="hm6-7w-4TD"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="jO7-L3-DIr" firstAttribute="leading" secondItem="RLV-D7-vui" secondAttribute="trailing" constant="8" id="0eG-1Z-3sl"/>
+                                        <constraint firstItem="jO7-L3-DIr" firstAttribute="top" secondItem="xKb-ED-Aa8" secondAttribute="topMargin" id="8DN-Rp-3SJ"/>
+                                        <constraint firstAttribute="bottom" secondItem="RLV-D7-vui" secondAttribute="bottom" constant="8" id="9if-7U-VFn"/>
+                                        <constraint firstItem="RLV-D7-vui" firstAttribute="leading" secondItem="xKb-ED-Aa8" secondAttribute="leading" id="Dnh-6V-bmV"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="jO7-L3-DIr" secondAttribute="trailing" id="hky-ff-OkA"/>
+                                        <constraint firstItem="jO7-L3-DIr" firstAttribute="bottom" secondItem="xKb-ED-Aa8" secondAttribute="bottomMargin" id="mPT-I1-LaV"/>
+                                        <constraint firstItem="RLV-D7-vui" firstAttribute="top" secondItem="xKb-ED-Aa8" secondAttribute="top" constant="8" id="ohh-8t-cAd"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="mediaItemIconImageView" destination="RLV-D7-vui" id="X5v-SA-0uQ"/>
+                                    <outlet property="mediaItemSegmentedControl" destination="jO7-L3-DIr" id="vKj-6w-Faf"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="S36-uD-eSF" id="8yk-Ax-RXY"/>
+                            <outlet property="delegate" destination="S36-uD-eSF" id="r9q-zD-jzy"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" landscapeImage="gear" largeContentSizeImage="gear" id="xCP-is-zh7"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h8D-Ri-b3V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1073.913043478261" y="2191.0714285714284"/>
+        </scene>
         <!--Search View Controller-->
         <scene sceneID="Zzg-7l-vcs">
             <objects>
@@ -311,10 +389,10 @@
             </objects>
             <point key="canvasLocation" x="1073.913043478261" y="769.41964285714278"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Midia Tab Bar View Controller-->
         <scene sceneID="A5g-yG-HcY">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lqw-TD-fsm" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lqw-TD-fsm" customClass="MidiaTabBarViewController" customModule="Midia" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Tgn-PK-7Pu">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -325,14 +403,17 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Lpe-hi-oDy"/>
                         <segue destination="5oR-7h-Y9w" kind="relationship" relationship="viewControllers" id="0wF-cI-rws"/>
                         <segue destination="Dll-7a-XJe" kind="relationship" relationship="viewControllers" id="k5h-9l-K2E"/>
+                        <segue destination="S36-uD-eSF" kind="relationship" relationship="viewControllers" id="zCF-eZ-nV5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ctf-Ib-GBK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-306" y="769"/>
+            <point key="canvasLocation" x="-372" y="1134"/>
         </scene>
     </scenes>
     <resources>
+        <image name="book" catalog="system" width="64" height="50"/>
+        <image name="gear" catalog="system" width="64" height="58"/>
         <image name="placeholder" width="500" height="500"/>
     </resources>
 </document>
